# pyre-ql

./: .dockerignore  .gitignore  .ignore  Cargo.toml  Changes.md  README.md  devbox.json  justfile  package.json  security.md  work.md
.github/workflows/: release.yaml
benches/: SQL_GENERATION.md  pyre_benchmarks.rs  query.rs  server_runtime.rs
client/: README.md  package.json  tsconfig.json
client-elm/: .gitignore  README.md  elm.json  index.html  package.json
client-elm/docs/: DELTA_FORMAT.md  FINE_GRAINED_REACTIVITY.md  FINE_GRAINED_REACTIVITY_COMPLETE.md  FINE_GRAINED_REACTIVITY_SUMMARY.md  INDICES.md  SYNC_BEHAVIOR.md
client-elm/scripts/: build.sh
client-elm/src/: Db.elm  Main.elm
client-elm/src-ts/: engine.d.ts  example.ts  index.ts  types.ts
client-elm/src-ts/service/: indexeddb.ts  query-client.ts  (+3 more)
client-elm/tests/: FineGrainedReactivityTest.elm  README.md
client/docs/: indexeddb-schema.md
client/examples/: example.ts
client/src/: elm-adapter.ts  filter.ts  index.ts  query.ts  schema.ts  sse.ts  storage.ts  sync.ts  types.ts  websocket.ts
docs/: README.md  architecture.md  sql_remote.md  sqlite_quirks.md
docs/dev/: README.md  building.md
docs/releases/: version-0.1.1.md  version-0.1.2.md
docs/spec/: generated-crud-mutations.md  multi-database-client-routing.md  multi-database-devtools.md  pyre-serve.md  query.draft.md  query.md  schema.md  sql_generation.md  tagged-union-storage.md
docs/usage/: README.md  elm-sync.md  getting-started.md  mcp.md  migrations.md  multi-database-upgrade.md  namespacing.md  project-structure.md  pyre-serve.md  query.md  rust-server.md  schema.md  seeding.md  simple.md  sync.md  troubleshooting.md
editor/pyre-lang/: CHANGELOG.md  README.md  bun.lockb  package.json  pnpm-lock.yaml
editor/vscode/: syntax.json
examples/: query.pyre  schema.pyre
examples/elm/: Db.elm
playground/multidb/: README.md  bun.lockb  package.json  pnpm-lock.yaml  tsconfig.json
playground/pyre/: query.pyre  schema.pyre.old  schema.pyre.old2
playground/pyre-playground/: .gitignore  README.md  bun.lockb  package.json
playground/simple/: README.md  package.json  tsconfig.json
playground/sync/: .gitignore  README.md  SYNC.md  WORK.md  dev.sh  generate.sh  index.html  package.json  vite.config.ts
playground/wasm-calling/: migrate.ts  package-lock.json  package.json  sync.ts  syncDeltas.ts  tsconfig.json
pyre-cli/: Cargo.toml
pyre-cli/src/: command.rs  db.rs  filesystem.rs  main.rs
releases/: release-0.1.1.md  version-0.1.1.md
scripts/: build  bump  release-clean.mjs  release-pack.mjs  release-smoke.mjs
src/: ast.rs  color.rs  command.rs  db.rs  diff.rs  error.rs  filesystem.rs  format.rs  generate.rs  generated_queries.rs  hash.rs  lib.rs  main.rs  parser.rs  platform.rs  seed.rs  sync.rs  sync_delta.rs  sync_deltas.rs  sync_shape.rs  typecheck.rs
src/ast/: diff.rs
src/command/: check.rs  format.rs  generate.rs  generate_migration.rs  init.rs  introspect.rs  migrate.rs  shared.rs
src/db/: diff.rs  introspect.rs  migrate.rs  mod.rs
src/ext/: string.rs
src/generate/: elm.rs  format.rs  manifest.rs  migration.rs  mod.rs  sql.rs  to_string.rs  typealias.rs  typescript.rs
src/server/: database_id.rs  manifest.rs  mod.rs  query.rs  schema.rs  sync.rs
src/wasm/: migrate.rs
tests/: ast.rs  basic.rs  commands.rs  elm_client.rs  elm_db.rs  elm_lenses.rs  filesystem.rs  id_types.rs  lib.rs  mcp.rs  migrations.rs  query_server.rs  relationships.rs  rust_server.rs  seed.rs  sync.rs  sync_server.rs  test_parsing.rs.skip  typecheck.rs  typecheck_insert_session.rs  typescript_db.rs  typescript_query_shape.rs  union_types.rs
tests/e2e/: basic.rs  mod.rs  relationships.rs  union_types.rs
tests/formatting/: mod.rs  newlines.rs  variant_fields.rs
tests/helpers/: error.rs  error_basic.rs  mod.rs  print.rs  schema.rs  schema_full.rs  schema_migrations.rs  schema_v1.rs  test_database.rs
tests/parsing/: deletes.rs  inline_comments.rs  inserts.rs  mod.rs  permissions.rs  queries.rs  schema.rs  updates.rs  variant_fields.rs
tests/queries/: affected_rows.rs  basic.rs  basic_queries.rs  contract_shape.rs  limit.rs  mod.rs  multiple_inserts.rs  mutation_responses.rs  permissions.rs  relationship.rs  relationship_queries.rs  union_types.rs  where.rs  where_queries.rs
wasm/: Cargo.toml
wasm/server/: index.ts  init.ts  mutations.ts  package.json  query-sync.ts  query.ts  schema.ts  sync.ts  wasm.ts
wasm/server/runtime/: runner.ts  sql.ts
wasm/src/: cache.rs  lib.rs  migrate.rs  query.rs  seed.rs  sync.rs  sync_deltas.rs  sync_shape.rs
(+132 files in other folders)
