[package]
name = "pyre"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "pyre"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
Inflector = "0.11.4"
atty = "0.2.14"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
libsql = "0.3.5"
nom = "7.1.3"
nom_locate = "4.2.0"
regex = "1.10.5"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
sha2 = "0.10.8"
tokio = "1.38.0"
walkdir = "2.5.0"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimization
panic = "abort"   # Use abort on panic to reduce binary size
strip = true      # Strip debug symbols (if supported by your cargo version)
