[package]
name = "pyre"
version = "0.1.1"
edition = "2021"


[features]
default = ["filesystem", "database", "json"]
filesystem = ["walkdir"]
database = ["libsql", "tokio"]
wasm = ["getrandom/js"]
json = ["serde_json"]

[[bin]]
name = "pyre"
path = "pyre-cli/src/main.rs"
required-features = ["filesystem", "database", "json"]

[lib]
path = "src/lib.rs"


[dependencies]
atty = "0.2.14"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
libsql = { version = "0.9.11", optional = true }
nom = "7.1.3"
nom_locate = "4.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", optional = true }
sha2 = "0.10.8"
tokio = { version = "1.38.0", optional = true, features = ["rt-multi-thread"] }
walkdir = { version = "2.5.0", optional = true }
getrandom = { version = "0.2.15", optional = true }

[dev-dependencies]
tempfile = "3.15"
assert_cmd = "2.0"
predicates = "3.1.3"
criterion = "0.5"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimization
panic = "abort"   # Use abort on panic to reduce binary size
strip = true      # Strip debug symbols (if supported by your cargo version)

[[bench]]
name = "pyre_benchmarks"
harness = false

[[bench]]
name = "query"
harness = false
