[package]
name = "pyre-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyre = { path = "..", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
serde_json = "1.0.117"
serde = "1.0.203"
serde_derive = "1.0.203"
