[package]
name = "pyre-wasm"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimization
panic = "abort"   # Remove panic unwinding code
strip = true      # Strip debug symbols

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyre = { path = "../", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0.140"
